<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/mainlayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <EditText
            android:id="@+id/resultEdit"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="2dp"
            android:backgroundTint="@color/red"
            android:ems="10"
            android:gravity="right"
            android:hint="0"
            android:inputType="text"
            android:textColor="@color/light_blue"
            android:textColorHint="@color/light_blue"
            android:textSize="54sp"
            android:textStyle="bold"
            android:typeface="monospace" />

        <LinearLayout
            android:id="@+id/ButtonRow1"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn07"
                style="borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/circular_button"
                android:cursorVisible="false"
                android:onClick="@string/onClickNumericalButton"
                android:text="@string/button_07"
                android:textColor="@color/light_blue"
                android:textSize="38sp"
                android:textStyle="bold"
                android:typeface="monospace"
                app:backgroundTint="@color/medium_blue" />


            <Button
                android:id="@+id/btn08"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/circular_button"
                android:onClick="@string/onClickNumericalButton"
                android:text="@string/button_08"
                android:textColor="@color/light_blue"
                android:textSize="38sp"
                android:textStyle="bold"
                android:typeface="monospace"
                app:backgroundTint="@color/medium_blue" />

            <Button
                android:id="@+id/btn09"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/circular_button"
                android:onClick="onClickNumericalButton"
                android:text="@string/button_09"
                android:textColor="@color/light_blue"
                android:textSize="38sp"
                android:textStyle="bold"
                android:typeface="monospace"
                app:backgroundTint="@color/medium_blue" />

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/circular_button"
                android:onClick="btnAddClick"
                android:text="@string/button_add"
                android:textColor="@color/light_blue"
                android:textSize="38sp"
                android:textStyle="bold"
                android:typeface="monospace"
                app:backgroundTint="@color/medium_blue" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ButtonRow2"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn04"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/circular_button"
                android:onClick="onClickNumericalButton"
                android:text="@string/button_04"
                android:textColor="@color/light_blue"
                android:textSize="38sp"
                android:textStyle="bold"
                android:typeface="monospace"
                app:backgroundTint="@color/medium_blue" />

            <Button
                android:id="@+id/btn05"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/circular_button"
                android:onClick="onClickNumericalButton"
                android:scrollHorizontally="false"
                android:text="@string/button_05"
                android:textColor="@color/light_blue"
                android:textSize="38sp"
                android:textStyle="bold"
                android:typeface="monospace"
                app:backgroundTint="@color/medium_blue" />

            <Button
                android:id="@+id/btn06"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/circular_button"
                android:onClick="onClickNumericalButton"
                android:text="@string/button_06"
                android:textColor="@color/light_blue"
                android:textSize="38sp"
                android:textStyle="bold"
                android:typeface="monospace"
                app:backgroundTint="@color/medium_blue" />

            <Button
                android:id="@+id/btnMinus"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/circular_button"
                android:onClick="btnMinusClick"
                android:text="@string/button_minus"
                android:textColor="@color/light_blue"
                android:textSize="38sp"
                android:textStyle="bold"
                android:typeface="monospace"
                app:backgroundTint="@color/medium_blue" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ButtonRow3"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn01"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/circular_button"
                android:onClick="onClickNumericalButton"
                android:text="@string/button_01"
                android:textColor="@color/light_blue"
                android:textSize="38sp"
                android:textStyle="bold"
                android:typeface="monospace"
                app:backgroundTint="@color/medium_blue" />

            <Button
                android:id="@+id/btn02"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/circular_button"
                android:onClick="onClickNumericalButton"
                android:text="@string/button_02"
                android:textColor="@color/light_blue"
                android:textSize="38sp"
                android:textStyle="bold"
                android:typeface="monospace"
                app:backgroundTint="@color/medium_blue" />

            <Button
                android:id="@+id/btn03"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/circular_button"
                android:onClick="onClickNumericalButton"
                android:text="@string/button_03"
                android:textColor="@color/light_blue"
                android:textSize="38sp"
                android:textStyle="bold"
                android:typeface="monospace"
                app:backgroundTint="@color/medium_blue" />

            <Button
                android:id="@+id/btnDivide"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/circular_button"
                android:onClick="btnDivideClick"
                android:text="@string/button_divide"
                android:textColor="@color/light_blue"
                android:textSize="38sp"
                android:textStyle="bold"
                android:typeface="monospace"
                app:backgroundTint="@color/medium_blue" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ButtonRow4"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnClear"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/circular_button"
                android:onClick="btnClearClick"
                android:text="@string/button_clear"
                android:textColor="@color/light_blue"
                android:textSize="38sp"
                android:textStyle="bold"
                android:typeface="monospace"
                app:backgroundTint="@color/medium_blue" />

            <Button
                android:id="@+id/btn00"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/circular_button"
                android:onClick="onClickNumericalButton"
                android:text="@string/button_00"
                android:textColor="@color/light_blue"
                android:textSize="38sp"
                android:textStyle="bold"
                android:typeface="monospace"
                app:backgroundTint="@color/medium_blue" />

            <Button
                android:id="@+id/btnDot"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/circular_button"
                android:onClick="onClickNumericalButton"
                android:text="@string/button_dot"
                android:textColor="@color/light_blue"
                android:textSize="38sp"
                android:textStyle="bold"
                android:typeface="monospace"
                app:backgroundTint="@color/medium_blue" />

            <Button
                android:id="@+id/btnMultiply"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/circular_button"
                android:onClick="btnMultiplyClick"
                android:text="@string/button_multiply"
                android:textColor="@color/light_blue"
                android:textSize="38sp"
                android:textStyle="bold"
                android:typeface="monospace"
                app:backgroundTint="@color/medium_blue" />
        </LinearLayout>

        <Button
            android:id="@+id/btnResult"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="4dp"
            android:background="@drawable/circular_button"
            android:onClick="btnResultClick"
            android:text="@string/button_result"
            android:textColor="@color/light_blue"
            android:textSize="38sp"
            android:textStyle="bold"
            android:typeface="monospace"
            app:backgroundTint="@color/medium_blue" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

